--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
 language: objective-c
-xcode_project: SampleiOS.xcodeproj
-xcode_scheme: SampleiOS
+script:
+- xctool -project SampleiOS.xcodeproj -scheme SampleiOS clean build -sdk iphonesimulator8.1
+- xctool -project SampleiOS.xcodeproj -scheme SampleiOS test -sdk iphonesimulator8.1
