--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: objective-c
 script:
 - xctool -project SampleiOS.xcodeproj -scheme SampleiOS clean build -sdk iphonesimulator8.1
-- xctool -project SampleiOS.xcodeproj -scheme SampleiOS test -sdk iphonesimulator8.1
+- xctool -project SampleiOS.xcodeproj -scheme SampleiOS build test -sdk iphonesimulator8.1
