--- a/SampleiOS.xcodeproj/xcshareddata/xcschemes/SampleiOS.xcscheme
+++ b/SampleiOS.xcodeproj/xcshareddata/xcschemes/SampleiOS.xcscheme
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0610"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -90,7 +89,7 @@
       useCustomWorkingDirectory = "NO"
       buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable>
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "07C1D8C31AA0EFC0004B51AD"
@@ -98,7 +97,7 @@
             BlueprintName = "SampleiOS"
             ReferencedContainer = "container:SampleiOS.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
